@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.63 2005/01/04 13:31:41 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.64 2005/01/04 16:36:27 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -289,6 +289,8 @@ Exim version 4.50
     consequently, it could be overwritten for a subsequent message in the same
     SMTP connection. (Fix 4.40/11 dealt with the non-cache case, but overlooked
     the caching.)
+
+66. Added hosts_max_try_hardlimit to the smtp transport, default 50.
 
 
 Exim version 4.43
